<resources>
    <string name="app_name">Innometrics</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="enter_your_login">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="send_setting">Send</string>
    <string name="store_email"> </string>
    <string name="total_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="settings">Settings</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">User account</string>
    <string name="sync_header">Data submission</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Name Surname</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">Login</string>
    <string name="data_collection_interval_minutes">Data collection interval (minutes)</string>
    <string name="last_sent_information">Last sent information</string>
    <string name="sending_statistics_interval_minutes">Sending statistics interval(minutes)</string>
    <string name="save">Save</string>
    <string name="default_value_collecting">1</string>
    <string name="default_value_sending">100000</string>
    <string name="user_information">User information</string>
    <string name="date">No information</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>

</resources>
